<resources>
    <string name="app_name">UrlShortener</string>
    <string name="lorem">Lorem</string>
    <string name="intro_title_01">Intro Title 1</string>
    <string name="get_started">Get Started</string>
    <string name="intro_title_04">Intro Title 4</string>
    <string name="intro_title_03">Intro title 3</string>
    <string name="intro_title_02">Intro title 2</string>
    <string name="shorten_url">Shorten Url</string>
    <string name="invalid_url">Invalid Url</string>
    <string name="please_wait">Please wait...</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="url_copied">Url copied</string>
    <string name="enter_url">Enter Url</string>
    <string name="error_in_network_connection">Error in Network connection</string>
</resources>
